<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:showIn="@layout/activity_form">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".FormActivity"
        tools:showIn="@layout/activity_form">

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trashTypes"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/categoriesTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_entry_title"
            android:id="@+id/newEntryTitle"
            android:layout_marginTop="77dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/categoryTitle"
            android:id="@+id/categoriesTitle"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/newEntryTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/description_title"
            android:id="@+id/descriptionTitle"
            android:layout_below="@+id/trashTypes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/descriptionTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/imageView"
            android:visibility="visible"
            android:onClick="launchCamera"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/entrypic1"
            android:tag="photo1"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/imageView2"
            android:visibility="visible"
            android:onClick="launchCamera"
            android:contentDescription="@string/entrypic2"
            android:tag="photo2"
            android:layout_below="@+id/editText"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button3"
            android:onClick="onClickSend"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>
</ScrollView>