<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.maciek.myapplication.LogInToSendActivity"
    tools:showIn="@layout/activity_log_in_to_send"
    android:background="@color/backgroundColor">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zalogujTitle"
        android:id="@+id/loginTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailLogin"
        android:layout_marginTop="181dp"
        android:width="320dp"
        android:hint="@string/emailHint"
        android:layout_below="@+id/loginTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLogin"
        android:width="320dp"
        android:layout_below="@+id/emailLogin"
        android:layout_alignLeft="@+id/emailLogin"
        android:layout_alignStart="@+id/emailLogin"
        android:layout_marginTop="43dp"
        android:hint="@string/passwordHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalogujTitle"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="onClickLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorMessage"
        android:layout_alignBottom="@+id/emailLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:textColor="@android:color/holo_orange_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Zaloguj się aby móc wysłać zgłoszenie"
        android:id="@+id/textView2"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/loginTitle"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
